lib/nails_derive/tests/ui/from-request-non-captured-path-name.stderr
error: This name doesn't exist in the endpoint path
 --> $DIR/from-request-non-captured-path-name.rs:6:13
  |
6 |     #[nails(path = "idd")]
  |             ^^^^^^^^^^^^

error: This name doesn't exist in the endpoint path
  --> $DIR/from-request-non-captured-path-name.rs:13:13
   |
13 |     #[nails(path)]
   |             ^^^^

error: Could not compile `nails_derive-tests`.
